# gdbus-codegen-glibmm

./: ADDENDUM.org  README.md  example.cpp  setup.py
codegen_glibmm/: codegen.py  codegen_main.py
include/: README.org  luxpromise.h
test/: runtests.sh
test/cmake_modules/: AddGTestTest.cmake
test/common/: futures.xml
test/luxpromise/: CMakeLists.txt  maintest.cpp
test/promise/: CMakeLists.txt  testpromisemain.cpp  testpromisemain.h
test/proxy/: CMakeLists.txt  testproxymain.cpp
test/stub/: CMakeLists.txt  teststubmain.cpp  teststubmain.h
